# raytracer

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
result_sample/GT/: GT19200.ppm  GT6400.ppm
result_sample/PROGRESSIVE_PHOTONMAP/: image_sceneforppm2_progressive_640_480_1_2_10000000_200_2000000_10.hdr
result_sample/RAW_PHOTONMAP/: image_scene6_640_480_1_1_10000000_32_64.hdr
src/: cameras.h  constant.h  dof_camera.h  hdr.h  intersection.h  kdtree.h  main.cpp  material.h  memo_stochastic_ppm.h  photonmap.h  photonmap_sample.h  pinhole_camera.h  ppm.h  ppm_sample.h  progressive_photonmapping.h  radiance.h  random.h  raw_ppm.h  ray.h  render.h  scene.h  simple-mlt.h  smallppm_exp.h  sphere.h  sppm2.h  stochastic_ppm.h  vec.h
src/sampler/: point_sampler_disk.h  point_sampler_mc.h  point_sampler_sphere.h  value_sampler.h
